--- a/MailServer/client/templates/client/sent.html
+++ b/MailServer/client/templates/client/sent.html
@@ -1,12 +1,10 @@
 {% extends 'client/base.html' %}
 
-{% block title %}<h1>Home</h1>{% endblock %}
-
 {% block content %}
- <div class="container">
+<div class="container">
     <div class="row">
         <div class="jumbotron">
-            <h2>Hello {{user}}</h2>
+            <h3>Mail Sent Successfully</h3>
         </div>
     </div>
 </div>
