--- a/MailServer/client/templates/client/base.html
+++ b/MailServer/client/templates/client/base.html
@@ -23,24 +23,38 @@
                                 </button>
                                 <a class="navbar-brand" href="#">Mail Server</a>
                             </div>
-                            <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account
                                             <span class="caret"></span>
                                         </a>
                                         <ul class="dropdown-menu" role="menu">
+                                            
                                             <li>
-                                                <a href="/admin">Register</a>
+                                                {{user.email}}
                                             </li>
                                             <li class="divider"></li>
+                                            <li>
+                                                <a href="/logout">Logout</a>
+                                            </li>
+                                            
                                         </ul>
                                     </li>
                                 </ul>
-                            </div> -->
+                            </div>
                         </div>
                     </nav>
-
+                    {% if user.is_authenticated %}
+                    <div class="container">
+                        <div class="row">
+                            <div class="jumbotron">
+                            <h2>Hello {{user}} - {{ user.email }}</h2>
+                            <a href="/">Home</a> &nbsp;&nbsp;&nbsp;<a href="/compose">Compose</a>&nbsp;&nbsp;&nbsp;<a href="/sent">Sent</a>
+                            </div>
+                        </div>
+                    </div>
+                    {%endif%}
                 {% block content %}
                 {% endblock %}
 
