--- a/MailServer/client/templates/client/home.html
+++ b/MailServer/client/templates/client/home.html
@@ -6,13 +6,18 @@
  <div class="container">
     <div class="row">
         <div class="jumbotron">
-            <h2>Hello {{user}} - {{ user.email }}</h2>
             <h3>Your Mail</h3>
-            <ul>
-            {% for message in messages %}
-            <li> {{ message }}
-            {% endfor %}
-            </ul>
+	        {% if len > 0 %}
+	            <ul>
+	            {% for message in messages %}
+	            <li> <a href=view/{{ message.id }}>{{message}}</a>
+	            {% endfor %}
+	            </ul>
+	        {% else %}
+	        	<center>
+	        		You don't have any messages in your inbox
+	        	</center>
+	        {% endif %}
         </div>
     </div>
 </div>
